# ansible-role-portainer

./: .ansible-lint  .gitignore  CLAUDE.md  NEXT-STEPS.md  README.md  STACKS-IMPLEMENTATION.md  main.py  pyproject.toml
defaults/: main.yml
meta/: main.yml
molecule/default/: cleanup.yml  molecule.yml  playbook.yml  verify.yml
molecule/default/group_vars/: all.yml
tasks/: endpoints.yml  main.yml  stack_single.yml  stacks.yml
templates/: http-echo-compose.yml.j2
