[project]
name = "ansible-role-portainer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "ansible-lint>=25.6.1",
    "flake8>=7.3.0",
    "molecule>=25.6.0",
    "molecule-plugins[docker]>=23.7.0",
    "testinfra>=6.0.0",
    "yamllint>=1.37.1",
]
